syntax = "proto3";
package gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/circuit_breaker";

import "google/protobuf/wrappers.proto";
import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;


// CircuitBreakerConfig contains the options for customizing circuit breaking behavior.
// See the [envoy docs](https://www.envoyproxy.io/docs/envoy/v1.14.1/api-v2/api/v2/cluster/circuit_breaker.proto#envoy-api-msg-cluster-circuitbreakers)
// for the meaning of these values.
message CircuitBreakerConfig {
    google.protobuf.UInt32Value max_connections = 1;
    google.protobuf.UInt32Value max_pending_requests = 2;
    google.protobuf.UInt32Value max_requests = 3;
    google.protobuf.UInt32Value max_retries = 4;
    bool track_remaining = 5;
}
